--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <div id="game">
         <div id="gameField">
             <div id="catcher"></div>
-            <div id="target"></div>
+            <img id="target" src="images/cube.png" width="30px" height="30px">
         </div>
         <div id="informationTable">
             <div class="informationBlock">
